--- a/hugo.yaml
+++ b/hugo.yaml
@@ -23,7 +23,9 @@ params:
   description: "An itinerant mind."
   hideMadeWithLine: true
 
-  
+  mermaid:
+    js_url: https://cdn.jsdelivr.net/npm/mermaid@latest/dist/mermaid.esm.min.mjs
+
 
 menu:
   main:
